--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-API_ID=667788990
-API_HASH=wwq8325ba83751dfade998899988gh
+API_ID=28036362
+API_HASH=84e4bd8457dab2f065801bde8874842a
 SESSION_STRING=1BtsOGkBu4xsJ0-hjlJkH30Iaz-1Trsdqki61DAhYZz0Dcp1wdk=
-SOURCE_CHAT_ID=-1001234567890
-TARGET_CHAT_ID=-1002888859999
-MONGO_URI=mongodb+srv://woodcraft:angellol@cluster0.9kgwwur.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-DEFAULT_ADMINS=123456789
+SOURCE_CHAT_ID=-1001934313299
+TARGET_CHAT_ID=-1002465707375
+MONGO_URI=mongodb+srv://wikeke7922:VMoBcxdkgJwjeCaK@cluster0.sexvt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DEFAULT_ADMINS=7576455886
 PORT=8080
