--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 API_ID=28036362
 API_HASH=84e4bd8457dab2f065801bde8874842a
-SESSION_STRING=1BtsOGkBu4xsJ0-hjlJkH30Iaz-1Trsdqki61DAhYZz0Dcp1wdk=
+SESSION_STRING=
 SOURCE_CHAT_ID=-1001934313299
 TARGET_CHAT_ID=-1002465707375
 MONGO_URI=mongodb+srv://wikeke7922:VMoBcxdkgJwjeCaK@cluster0.sexvt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
